2008-09-29  Derek R. Price  <derek@ximbiot.com>

	* client.c (is_cvsroot_level): Replace a conditional with an
	assertion.

	* log.c (rlog_proc): Avoid adding trailing /. to repository.  Some
	cleanup.
	* recurse.c (repository, struct recursion_frame, start_recursion):
	Declare repository const char *.
	(do_recursion, do_dir_proc): Ditto.  Some cleanup.
	* recurse.h (start_recursion): Update prototype to match.
	* subr.h (REPLACE): New convenience macro.
	* update.c (do_update): Cleanup traces.

	* client.c (is_cvsroot_level): Improve commenting, minor cleanup.

2008-09-28  Derek R. Price  <derek@ximbiot.com>

	* checkout.c (checkout): Minor cleanup.
	* parseinfo.c (Parse_Info): Add function trace.

	Fixes recurse.c error from two commits back by correctly preserving
	and composing update_dir.  Incidentally fixes a few other minor bugs.
	* commit.c (commit_direntproc): Handle corrected update_dir.
	* recurse.c (do_dir_proc): Preserve update_dir.  Clean up.
	* sanity.sh: Compensate for correctly preserved update_dir.

	* ls.c (ls_dirleaveproc): Reindent, add quoting in error message.

	* find_names.c (Find_Directories): Output returned list in traces.
	* hash.h (printlist): Add prototype.
	* ls.c (ls_direntproc): Add function trace.
	* recurse.c (do_recursion): Condense traces.
	(do_file_proc, do_dir_proc): Add function traces.

	* recurse.c: Back out previous accidental, undocumented, and broken
	commit.

2008-09-25  Derek R. Price  <derek@ximbiot.com>

	* client.c (send_repository, send_dirent_proc), recurse.c
	(do_file_proc): Cleanup.  Try harder to preserve update_dir.
	* server.c: Cleanup.
	(output_dir): Become wrapper for...
	(output_dir_i): ...this new function used...
	(serve_notify): ...here to avoid code duplication.
	* sanity.sh (server): Compensate for correct notify repository line.

	* create_adm.c: Some quoting and cleanup.
	* repos.c (Short_Repository): Improve header comment.  Assert truths.
	Strip all trailing slashes.
